Put together homepage & troubleshot layout issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -245,7 +245,7 @@ a {
   font-weight: 600;
   margin: 1rem 0;
   outline: 0;
-  padding: 2rem 3rem;
+  padding: 2rem 4vw; /* vw to shrink & grow padding as screen size increases */
   text-align: center;
   text-transform: uppercase;
   white-space: nowrap;
@@ -346,6 +346,7 @@ a {
   border: 0;
   flex-grow: 1;
   padding: 1.5rem 2rem;
+  width: 0; /* Used to troubleshoot input from jumping out of input-group container.  Flex-grow will size it as screen size increases. */
 }
 
 .input-group .btn {
@@ -828,8 +829,9 @@ a {
 }
 
 .block-domain__prices {
+  color: var(--color-headings);
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 6rem);
   font-size: 2rem;
   font-weight: 600;
